--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header class="flex flex-col items-center">
             <img class="max-w-[120px] rounded-[50%] mt-[30px] mb-[10px]" src="./assets/eduardo-perfil.jpeg" alt="Foto de perfil">
             <h1 class="text-2xl font-extrabold">Eduardo Palmeira</h1>
-            <p class="text-lg font-bold mb-[0.6rem]">Corretor de Imovéis</p>
+            <p class="text-lg font-bold mb-[0.6rem]">Encontre casas, apartamentos e imóveis comerciais com segurança e facilidade. Faça parte da nossa comunidade de clientes satisfeitos.</p>
         </header>
 
         <section class="flex flex-col gap-[1.25rem]">
