mensagem do commit

--- a/index.html
+++ b/index.html
@@ -15,43 +15,43 @@
         <header class="flex flex-col items-center">
             <img class="max-w-[120px] rounded-[50%] mt-[30px] mb-[10px]" src="./assets/eduardo-perfil.jpeg" alt="Foto de perfil">
             <h1 class="text-2xl font-extrabold">Eduardo Palmeira</h1>
-            <p class="text-lg font-bold mb-[0.6rem]">Encontre casas, apartamentos e imóveis comerciais com segurança e facilidade. Faça parte da nossa comunidade de clientes satisfeitos.</p>
+            <p class="mt-3 text-center text-lg font-bold mb-[0.6rem]">Encontre casas, apartamentos e imóveis comerciais com segurança e facilidade. Faça parte da nossa comunidade de clientes satisfeitos.</p>
         </header>
 
         <section class="flex flex-col gap-[1.25rem]">
 
-                <a href="https://www.linkedin.com/company/rocket-jr/posts/?feedView=all" target="_blank" class="link">
+                <a href="https://www.facebook.com/eduardo.palmeira.35/" target="_blank" class="link">
                   <button class="bg-blue-500 hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
-                      <span>LinkedIn</span>
-                      <i class="fa-brands fcd a-linkedin"></i>
+                      <span>Facebook</span>
+                      <img src="" alt="">
                   </button>
                 </a>
 
-                <a href=" https://wa.me/558299767685" target="_blank" class="link">
+                <a href="https://wa.link/1pwalt" target="_blank" class="link">
                     <button class="bg-blue-500 hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
                         <span>WhatsApp</span>
-                        <i class="fa-brands fa-whatsapp"></i>
+                        <img src="" alt="">
                     </button>
                 </a>
 
-                <a href="https://www.instagram.com/rocketjroficial/?next=%2F" target="_blank" class="link">
+                <a href="https://www.instagram.com/eduardolaerciopalmeira?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="link">
                     <button class="bg-blue-500 hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
                         <span>Instagram</span>
-                        <i class="fa-brands fa-instagram"></i>
+                        <img src="" alt="">
                     </button>
                 </a>
 
                 <a href="https://rocketjr.com.br/" target="_blank" class="link">
                     <button class="bg-blue-500 hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
                         <span>Nosso Site</span>
-                        <img src="Icone_Nosso_Site.png" alt="">
+                        <img src="" alt="">
                     </button>
                 </a>
         </section>
 
         <footer>
 
-            <a class="bg-blue-500 hover:bg-blue-400 rounded-[4px] p-[0.5rem]" href="mailto:rocketjr.ej@gmail.com" class="btn-footer degrade" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+            
 
         </footer>
 
