adicionei as imagens facebook e localização, mudei as cores das tags button e span sendo que na questão de hover modifiquei apenas na primeira tag button e na primeira tag span, mudei os textos das tags span e adicionei uns comentários para eu não me perder qual botão é cada um, mudei no primeirro botão tambem o seu tamanho e arrendondamento.

--- a/index.html
+++ b/index.html
@@ -20,30 +20,34 @@
 
         <section class="flex flex-col gap-[1.25rem]">
 
+                <!--Facebook-->
                 <a href="https://www.facebook.com/eduardo.palmeira.35/" target="_blank" class="link">
-                  <button class="bg-blue-500 hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
-                      <span>Facebook</span>
+                  <button class="bg-[#F9F9F9] hover:bg-[#002E76] rounded-[0.6rem] w-full h-[3.5rem] p-[0.5rem]">
+                      <span class="text-[#002E76] hover:text-[#F9F9F9]">Eduardo Palmeira</span>
                       <img src="" alt="">
                   </button>
                 </a>
 
+                <!--WhatsApp-->
                 <a href="https://wa.link/1pwalt" target="_blank" class="link">
-                    <button class="bg-blue-500 hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
-                        <span>WhatsApp</span>
+                    <button class="bg-[#F9F9F9] hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
+                        <span class="text-[#002E76]">Eduardo Palmeira</span>
                         <img src="" alt="">
                     </button>
                 </a>
 
+                <!--Instagram-->
                 <a href="https://www.instagram.com/eduardolaerciopalmeira?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="link">
-                    <button class="bg-blue-500 hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
-                        <span>Instagram</span>
+                    <button class="bg-[#F9F9F9] hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
+                        <span class="text-[#002E76]">Eduardo Palmeira</span>
                         <img src="" alt="">
                     </button>
                 </a>
 
-                <a href="https://rocketjr.com.br/" target="_blank" class="link">
-                    <button class="bg-blue-500 hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
-                        <span>Nosso Site</span>
+                <!--Nosso Site-->
+                <a href="" target="_blank" class="link">
+                    <button class="bg-[#F9F9F9] hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
+                        <span class="text-[#002E76]">Eduardo Palmeira</span>
                         <img src="" alt="">
                     </button>
                 </a>
