modificando o tamanho e os hovers dos restos dos botões e modifcando os hovers do resto dos outros spans.

--- a/index.html
+++ b/index.html
@@ -30,24 +30,24 @@
 
                 <!--WhatsApp-->
                 <a href="https://wa.link/1pwalt" target="_blank" class="link">
-                    <button class="bg-[#F9F9F9] hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
-                        <span class="text-[#002E76]">Eduardo Palmeira</span>
+                    <button class="bg-[#F9F9F9] hover:bg-[#002E76] rounded-[0.6rem] w-full h-[3.5rem] p-[0.5rem]">
+                        <span class="text-[#002E76] hover:text-[#F9F9F9]">Eduardo Palmeira</span>
                         <img src="" alt="">
                     </button>
                 </a>
 
                 <!--Instagram-->
                 <a href="https://www.instagram.com/eduardolaerciopalmeira?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="link">
-                    <button class="bg-[#F9F9F9] hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
-                        <span class="text-[#002E76]">Eduardo Palmeira</span>
+                    <button class="bg-[#F9F9F9] hover:bg-[#002E76] rounded-[0.6rem] w-full h-[3.5rem] p-[0.5rem]">
+                        <span class="text-[#002E76] hover:text-[#F9F9F9]">Eduardo Palmeira</span>
                         <img src="" alt="">
                     </button>
                 </a>
 
                 <!--Nosso Site-->
                 <a href="" target="_blank" class="link">
-                    <button class="bg-[#F9F9F9] hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
-                        <span class="text-[#002E76]">Eduardo Palmeira</span>
+                    <button class="bg-[#F9F9F9] hover:bg-[#002E76] rounded-[0.6rem] w-full h-[3.5rem] p-[0.5rem]">
+                        <span class="text-[#002E76] hover:text-[#F9F9F9]">Eduardo Palmeira</span>
                         <img src="" alt="">
                     </button>
                 </a>
