--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="h-screen bg-gradient-to-b from-black to-[#343132] bg-cover overflow-hidden">
+<body class="relative h-screen w-screen bg-[url('./assets/Background.png')] bg-cover bg-no-repeat">
     <div class="h-full m-(auto) flex flex-col items-center justify-center gap-[20px] text-white">
 
-        <header class="flex flex-col items-center">
-            <img class="max-w-[120px] rounded-[50%] mt-[30px] mb-[10px]" src="./assets/eduardo-perfil.jpeg" alt="Foto de perfil">
-            <h1 class="text-2xl font-extrabold">Eduardo Palmeira</h1>
+        <header class="flex flex-col items-center justify-center gap-[10px] mr-[1rem] ml-[1rem]">
+            <img src ='./assets/Foto-de-perfil.png'>
             <p class="mt-3 text-center text-lg font-bold mb-[0.6rem]">Encontre casas, apartamentos e imóveis comerciais com segurança e facilidade. Faça parte da nossa comunidade de clientes satisfeitos.</p>
         </header>
 
@@ -22,40 +21,40 @@
 
                 <!--Facebook-->
                 <a href="https://www.facebook.com/eduardo.palmeira.35/" target="_blank" class="link">
-                  <button class="bg-[#F9F9F9] hover:bg-[#002E76] rounded-[0.6rem] w-full h-[3.5rem] p-[0.5rem]">
-                      <span class="text-[#002E76] hover:text-[#F9F9F9]">Eduardo Palmeira</span>
-                      <img src="" alt="">
+                  <button class="bg-[#F9F9F9] hover:bg-blue-400 rounded-[0.6rem] w-full h-[3.5rem] p-[0.5rem]">
+                    <img src="./assets/Facebook.png" alt="ícone do Facebook" class="inline-block w-[1.5rem] h-[1.5rem] mr-2">
+                    <span class="text-[#002E76] hover:text-[#F9F9F9]">Eduardo Palmeira</span>
                   </button>
                 </a>
 
                 <!--WhatsApp-->
                 <a href="https://wa.link/1pwalt" target="_blank" class="link">
-                    <button class="bg-[#F9F9F9] hover:bg-[#002E76] rounded-[0.6rem] w-full h-[3.5rem] p-[0.5rem]">
-                        <span class="text-[#002E76] hover:text-[#F9F9F9]">Eduardo Palmeira</span>
-                        <img src="" alt="">
+                    <button class="bg-[#F9F9F9] hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
+                        <img src="./assets/WhatsApp.png" alt="ícone do WhatsApp" class="inline-block w-[1.5rem] h-[1.5rem] mr-2">
+                        <span class="text-[#002E76]">Eduardo Palmeira</span>
                     </button>
                 </a>
 
                 <!--Instagram-->
                 <a href="https://www.instagram.com/eduardolaerciopalmeira?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="link">
-                    <button class="bg-[#F9F9F9] hover:bg-[#002E76] rounded-[0.6rem] w-full h-[3.5rem] p-[0.5rem]">
-                        <span class="text-[#002E76] hover:text-[#F9F9F9]">Eduardo Palmeira</span>
-                        <img src="" alt="">
+                    <button class="bg-[#F9F9F9] hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
+                        <img src="./assets/Instagram.png" alt="ícone do Instagram" class="inline-block w-[1.5rem] h-[1.5rem] mr-2">
+                        <span class="text-[#002E76]">Eduardo Palmeira</span>
                     </button>
                 </a>
 
                 <!--Nosso Site-->
                 <a href="" target="_blank" class="link">
-                    <button class="bg-[#F9F9F9] hover:bg-[#002E76] rounded-[0.6rem] w-full h-[3.5rem] p-[0.5rem]">
-                        <span class="text-[#002E76] hover:text-[#F9F9F9]">Eduardo Palmeira</span>
-                        <img src="" alt="">
+                    <button class="bg-[#F9F9F9] hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
+                        <img src="./assets/PC.png" alt="ícone do Nosso Site" class="inline-block w-[1.5rem] h-[1.5rem] mr-2">
+                        <span class="text-[#002E76]">Nosso Site</span>
                     </button>
                 </a>
         </section>
 
         <footer>
 
-            
+
 
         </footer>
 
