mudando os tamanhos dos botões e sua cores do hover, mudando o hover das tags spans, mudando o tamanho da tag p, ajustando o tamanho da foto de perfil, adicionando a logo no footer e adicionando o botão de localização.

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="relative h-screen w-screen bg-[url('./assets/Background.png')] bg-cover bg-no-repeat">
-    <div class="h-full m-auto flex flex-col items-center justify-center gap-[20px] text-[#F9F9F9]">
+    <div class="h-full m-(auto) flex flex-col items-center justify-center gap-[20px] text-white">
 
         <header class="flex flex-col items-center justify-center gap-[10px] mr-[1rem] ml-[1rem]">
-            <img src ='./assets/Foto-de-perfil.png' class="w-[383px] h-[138.69px]" alt="Foto de perfil">
-            <p class="mt-3 text-center text-xs font-bold mb-[0.6rem]">Encontre casas, apartamentos e imóveis comerciais com segurança e facilidade. Faça parte da nossa comunidade de clientes satisfeitos.</p>
+            <img src ='./assets/Foto-de-perfil.png'>
+            <p class="mt-3 text-center text-lg font-bold mb-[0.6rem]">Encontre casas, apartamentos e imóveis comerciais com segurança e facilidade. Faça parte da nossa comunidade de clientes satisfeitos.</p>
         </header>
 
-        <section class="flex flex-col gap-[1.25rem] ">
+        <section class="flex flex-col gap-[1.25rem]">
 
                 <!--Facebook-->
                 <a href="https://www.facebook.com/eduardo.palmeira.35/" target="_blank" class="link">
-                  <button class="bg-[#F9F9F9] hover:bg-[#002E76] rounded-[0.6rem] w-[16rem] h-[3.5rem] p-[0.5rem]">
+                  <button class="bg-[#F9F9F9] hover:bg-blue-400 rounded-[0.6rem] w-full h-[3.5rem] p-[0.5rem]">
                     <img src="./assets/Facebook.png" alt="ícone do Facebook" class="inline-block w-[1.5rem] h-[1.5rem] mr-2">
                     <span class="text-[#002E76] hover:text-[#F9F9F9]">Eduardo Palmeira</span>
                   </button>
@@ -29,40 +29,32 @@
 
                 <!--WhatsApp-->
                 <a href="https://wa.link/1pwalt" target="_blank" class="link">
-                    <button class="bg-[#F9F9F9] hover:bg-[#002E76] rounded-[8px] w-[16rem] h-[3rem] p-[0.5rem]">
+                    <button class="bg-[#F9F9F9] hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
                         <img src="./assets/WhatsApp.png" alt="ícone do WhatsApp" class="inline-block w-[1.5rem] h-[1.5rem] mr-2">
-                        <span class="text-[#002E76] hover:text-[#F9F9F9]">Eduardo Palmeira</span>
+                        <span class="text-[#002E76]">Eduardo Palmeira</span>
                     </button>
                 </a>
 
                 <!--Instagram-->
                 <a href="https://www.instagram.com/eduardolaerciopalmeira?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="link">
-                    <button class="bg-[#F9F9F9] hover:hover:bg-[#002E76] rounded-[8px] w-[16rem] h-[3rem] p-[0.5rem]">
+                    <button class="bg-[#F9F9F9] hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
                         <img src="./assets/Instagram.png" alt="ícone do Instagram" class="inline-block w-[1.5rem] h-[1.5rem] mr-2">
-                        <span class="text-[#002E76] hover:text-[#F9F9F9]">Eduardo Palmeira</span>
+                        <span class="text-[#002E76]">Eduardo Palmeira</span>
                     </button>
-                </a>
-
-                <!--Localização-->
-                <a href="https://maps.app.goo.gl/rDQ9M6P3wDcQLMEJ6" target="_blank" class="link">
-                  <button class="bg-[#F9F9F9] hover:bg-[#002E76] rounded-[0.6rem] w-[16rem] h-[3.5rem] p-[0.5rem]">
-                    <img src="./assets/Localização.png" alt="ícone do Facebook" class="inline-block w-[1.5rem] h-[1.5rem] mr-2">
-                    <span class="text-[#002E76] hover:text-[#F9F9F9]">Eduardo Palmeira</span>
-                  </button>
                 </a>
 
                 <!--Nosso Site-->
                 <a href="" target="_blank" class="link">
-                    <button class="bg-[#F9F9F9] hover:bg-[#002E76] rounded-[8px] w-[16rem] h-[3rem] p-[0.5rem]">
+                    <button class="bg-[#F9F9F9] hover:bg-blue-400 rounded-[8px] w-full h-[3rem] p-[0.5rem]">
                         <img src="./assets/PC.png" alt="ícone do Nosso Site" class="inline-block w-[1.5rem] h-[1.5rem] mr-2">
-                        <span class="text-[#002E76] hover:text-[#F9F9F9]">Nosso Site</span>
+                        <span class="text-[#002E76]">Nosso Site</span>
                     </button>
                 </a>
         </section>
 
         <footer>
 
-            <img src="./assets/Logo Eduardo.png" alt="Logo do Linktree" class="w-[2.9rem] h-[2.9rem]">
+
 
         </footer>
 
