alteração do layout

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
-<body class="relative h-screen w-screen bg-[url('./assets/Background.png')] bg-cover bg-no-repeat">
-    <div class="h-full m-auto flex flex-col items-center justify-center gap-[20px] text-[#F9F9F9]">
+<body class="relative min-h-screen min-w-screen bg-[url('./assets/Background.png')] bg-cover bg-no-repeat">
+    <div class="min-h-screen flex flex-col items-center justify-center gap-[20px] text-[#F9F9F9]">
 
-        <header class="flex flex-col items-center justify-center gap-[10px] mr-[1rem] ml-[1rem]">
+        <header class="flex flex-col items-center justify-center gap-[10px] mr-[1rem] ml-[1rem] pt-4">
             <img src ='./assets/Foto-de-perfil.png' alt="Foto de Perfil" class="mt-1">
             <p class="font-montserrat font-bold font-normal mt-3 text-center text-xs font-bold mb-[0.6rem]">"Encontre casas, apartamentos e imóveis comerciais com segurança e facilidade. Faça parte da nossa comunidade de clientes satisfeitos."</p>
         </header>
@@ -23,43 +23,43 @@
 
                 <!--Facebook-->
                 <a href="https://www.facebook.com/eduardo.palmeira.35/" target="_blank" class="link">
-                  <button class="bg-[#F9F9F9] hover:bg-[#002E76] rounded-[0.6rem] w-[16rem] h-[3.5rem] p-[0.5rem]">
+                  <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] rounded-[0.6rem] w-[100%] h-[3.5rem] p-[0.5rem]">
                     <img src="./assets/Facebook.png" alt="ícone do Facebook" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
-                    <span class="font-montserrat font-bold text-xs text-[#002E76] hover:text-[#F9F9F9]">Eduardo Palmeira</span>
+                    <span class="font-montserrat font-bold text-xs text-[#002E76]">Eduardo Palmeira</span>
                   </button>
                 </a>
 
                 <!--WhatsApp-->
                 <a href="https://wa.link/1pwalt" target="_blank" class="link">
-                    <button class="bg-[#F9F9F9] hover:bg-[#002E76] rounded-[0.6rem] w-[16rem] h-[3rem] p-[0.5rem]">
+                    <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] rounded-[0.6rem] w-[100%] h-[3.5rem] p-[0.5rem]">
                         <img src="./assets/WhatsApp.png" alt="ícone do WhatsApp" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
-                        <span class="font-montserrat font-bold text-xs text-[#002E76] hover:text-[#F9F9F9]">Eduardo Palmeira</span>
+                        <span class="font-montserrat font-bold text-xs text-[#002E76]">Eduardo Palmeira</span>
                     </button>
                 </a>
 
                 <!--Instagram-->
                 <a href="https://www.instagram.com/eduardolaerciopalmeira?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="link">
-                    <button class="bg-[#F9F9F9] hover:bg-[#002E76] rounded-[0.6rem] w-[16rem] h-[3rem] p-[0.5rem]">
+                    <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] rounded-[0.6rem] w-[100%] h-[3.5rem] p-[0.5rem]">
                         <img src="./assets/Instagram.png" alt="ícone do Instagram" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
-                        <span class="font-montserrat font-bold text-xs text-[#002E76] hover:text-[#F9F9F9]">Eduardo Palmeira</span>
+                        <span class="font-montserrat font-bold text-xs text-[#002E76]">Eduardo Palmeira</span>
                     </button>
                 </a>
 
                 <!--Localização-->
                 <a href="hhttps://maps.app.goo.gl/rDQ9M6P3wDcQLMEJ6" target="_blank" class="link" >
-                    <button class="bg-[#F9F9F9] hover:bg-[#002E76] rounded-[0.6rem] w-[16rem] h-[3rem] p-[0.5rem]">
+                    <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] rounded-[0.6rem] w-[100%] h-[3.5rem] p-[0.5rem]">
                         <img src="./assets/Localização.png" alt="ícone do Instagram" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
-                        <span class="font-montserrat font-bold text-xs text-[#002E76] hover:text-[#F9F9F9]">Localização</span>
+                        <span class="font-montserrat font-bold text-xs text-[#002E76]">Localização</span>
                     </button>
                 </a>
 
                 <!--Nosso Site-->
                 <a href="" target="_blank" class="link">
-                    <button class="bg-[#F9F9F9] hover:bg-[#002E76]  rounded-[0.75rem] w-[16rem] h-[16.1rem] p-3 flex flex-col items-center">
+                    <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC]  rounded-[0.75rem] w-[100%] h-[16.1rem] p-3 flex flex-col items-center">
 
                         <div class="justify-center gap-2 w-full mb-2">
                             <img src="./assets/PC.png" alt="ícone do Nosso Site" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
-                            <span class="font-montserrat font-bold text-xs text-[#002E76] hover:text-[#F9F9F9]">Nosso Site</span>
+                            <span class="font-montserrat font-bold text-xs text-[#002E76]">Nosso Site</span>
                         </div>
 
                         <!-- Imagem do site -->
@@ -71,9 +71,9 @@
                 </a>
         </section>
 
-        <footer>
+        <footer class="pb-4">
 
-            <img src="./assets/Logo Eduardo.png" alt="Logo do Linktree" class="mt-4 w-[2.9rem] h-[2.9rem] ">
+            <img src="./assets/Logo Eduardo.png" alt="Logo do Linktree" class="mx-auto w-[2.9rem] h-[2.9rem] ">
 
         </footer>
 
