feat: Ajustando a responsividade

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="min-h-screen flex flex-col items-center justify-center gap-[20px] text-[#F9F9F9]">
 
         <header class="flex flex-col items-center justify-center gap-[10px] mr-[1rem] ml-[1rem] pt-4">
-            <img src ='./assets/Foto-de-perfil.png' alt="Foto de Perfil" class="mt-1">
+            <img src ='./assets/Foto-de-perfil.png' alt="Foto de Perfil" class="mt-1 w-72 sm:w-80 md:w-96 lg:w-[500px] h-auto mx-auto object-cover">
             <p class="font-montserrat font-bold font-normal mt-3 text-center text-xs font-bold mb-[0.6rem]">"Encontre casas, apartamentos e imóveis comerciais com segurança e facilidade. Faça parte da nossa comunidade de clientes satisfeitos."</p>
         </header>
 
@@ -23,49 +23,49 @@
 
                 <!--Facebook-->
                 <a href="https://www.facebook.com/eduardo.palmeira.35/" target="_blank" class="link">
-                  <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] rounded-[0.6rem] w-[100%] h-[3.5rem] p-[0.5rem]">
-                    <img src="./assets/Facebook.png" alt="ícone do Facebook" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
-                    <span class="font-montserrat font-bold text-xs text-[#002E76]">Eduardo Palmeira</span>
+                  <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] w-full h-[3.5rem] sm:h-[4rem] md:h-[4.5rem] lg:h-[5rem] p-[0.5rem] sm:p-[0.75rem] md:p-[1rem] lg:p-[1.25rem] rounded-[0.6rem] sm:rounded-[0.75rem] md:rounded-[0.9rem] lg:rounded-[1rem]">
+                    <img src="./assets/Facebook.png" alt="ícone do Facebook" class="inline-block w-8 h-8 mr-2">
+                    <span class="font-montserrat font-bold text-xs sm:text-xs md:text-sm lg:text-base text-[#002E76]">Facebook</span>
                   </button>
                 </a>
 
                 <!--WhatsApp-->
                 <a href="https://wa.link/1pwalt" target="_blank" class="link">
-                    <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] rounded-[0.6rem] w-[100%] h-[3.5rem] p-[0.5rem]">
-                        <img src="./assets/WhatsApp.png" alt="ícone do WhatsApp" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
-                        <span class="font-montserrat font-bold text-xs text-[#002E76]">Eduardo Palmeira</span>
+                    <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC]  w-full h-[3.5rem] sm:h-[4rem] md:h-[4.5rem] lg:h-[5rem] p-[0.5rem] sm:p-[0.75rem] md:p-[1rem] lg:p-[1.25rem] rounded-[0.6rem] sm:rounded-[0.75rem] md:rounded-[0.9rem] lg:rounded-[1rem]">
+                        <img src="./assets/WhatsApp.png" alt="ícone do WhatsApp" class="inline-block w-8 h-8 mr-2">
+                        <span class="font-montserrat font-bold text-xs sm:text-xs md:text-sm lg:text-base text-[#002E76]">WhatsApp</span>
                     </button>
                 </a>
 
                 <!--Instagram-->
                 <a href="https://www.instagram.com/eduardolaerciopalmeira?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="link">
-                    <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] rounded-[0.6rem] w-[100%] h-[3.5rem] p-[0.5rem]">
-                        <img src="./assets/Instagram.png" alt="ícone do Instagram" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
-                        <span class="font-montserrat font-bold text-xs text-[#002E76]">Eduardo Palmeira</span>
+                    <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] w-full h-[3.5rem] sm:h-[4rem] md:h-[4.5rem] lg:h-[5rem] p-[0.5rem] sm:p-[0.75rem] md:p-[1rem] lg:p-[1.25rem] rounded-[0.6rem] sm:rounded-[0.75rem] md:rounded-[0.9rem] lg:rounded-[1rem]">
+                        <img src="./assets/Instagram.png" alt="ícone do Instagram" class="inline-block w-8 h-8 mr-2">
+                        <span class="font-montserrat font-bold text-xs sm:text-xs md:text-sm lg:text-base text-[#002E76]">Instagram</span>
                     </button>
                 </a>
 
                 <!--Localização-->
                 <a href="hhttps://maps.app.goo.gl/rDQ9M6P3wDcQLMEJ6" target="_blank" class="link" >
-                    <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] rounded-[0.6rem] w-[100%] h-[3.5rem] p-[0.5rem]">
-                        <img src="./assets/Localização.png" alt="ícone do Instagram" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
-                        <span class="font-montserrat font-bold text-xs text-[#002E76]">Localização</span>
+                    <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] w-full h-[3.5rem] sm:h-[4rem] md:h-[4.5rem] lg:h-[5rem] p-[0.5rem] sm:p-[0.75rem] md:p-[1rem] lg:p-[1.25rem] rounded-[0.6rem] sm:rounded-[0.75rem] md:rounded-[0.9rem] lg:rounded-[1rem]">
+                        <img src="./assets/Localização.png" alt="ícone do Instagram" class="inline-block w-8 h-8 mr-2">
+                        <span class="font-montserrat font-bold text-xs sm:text-xs md:text-sm lg:text-base text-[#002E76]">Localização</span>
                     </button>
                 </a>
 
                 <!--Nosso Site-->
                 <a href="" target="_blank" class="link">
-                    <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC]  rounded-[0.75rem] w-[100%] h-[16.1rem] p-3 flex flex-col items-center">
+                    <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC]  rounded-[0.75rem] w-full h-[16.1rem] sm:h-[18rem] md:h-[20rem] lg:h-[22rem] p-3 sm:p-4 md:p-5 flex flex-col items-center">
 
                         <div class="justify-center gap-2 w-full mb-2">
-                            <img src="./assets/PC.png" alt="ícone do Nosso Site" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
-                            <span class="font-montserrat font-bold text-xs text-[#002E76]">Nosso Site</span>
+                            <img src="./assets/PC.png" alt="ícone do Nosso Site" class="inline-block w-8 h-8 mr-2">
+                            <span class="font-montserrat font-bold text-xs sm:text-xs md:text-sm lg:text-base text-[#002E76]">Nosso Site</span>
                         </div>
 
                         <!-- Imagem do site -->
                         <div class="flex items-center justify-center flex-1">
                             <img src="./assets/Img-do-botao-site.png" alt="Preview do site"
-                            class="w-[253px] h-[192px] object-contain rounded">
+                            class="w-[253px] h-[192px] sm:w-[280px] sm:h-[212px] md:w-[320px] md:h-[240px] lg:w-[360px] lg:h-[270px] object-contain rounded">
                         </div>
                     </button>
                 </a>
@@ -73,7 +73,7 @@
 
         <footer class="pb-4">
 
-            <img src="./assets/Logo Eduardo.png" alt="Logo do Linktree" class="mx-auto w-[2.9rem] h-[2.9rem] ">
+            <img src="./assets/Logo Eduardo.png" alt="Logo do Linktree" class="mx-auto w-12 h-12 ">
 
         </footer>
 
