feat: ajustando o background

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Faixa esquerda (sempre esticada verticalmente via bg-repeat-y) -->
     <div
-        class="absolute inset-y-0 left-0 z-10 w-[35px] sm:w-8 md:w-10 lg:w-12 xl:w-14 bg-[url('./assets/faixa_lateral_esquerda.svg')] bg-repeat-y bg-center pointer-events-none">
+        class="absolute inset-y-0 left-0 z-0 w-[35px] h-[1024px] sm:w-[35px] sm:h-[800px] sm:z-0 md:w-[70px] md:h-[1120px] md:z-0 lg:w-[100px] lg:h-[1230px] lg:z-0 bg-[url('./assets/faixa_lateral_esquerda.svg')] bg-center bg-repeat-y pointer-events-none">
     </div>
 
     <div class="min-h-screen flex flex-col items-center justify-center gap-[20px] text-[#F9F9F9]">
@@ -27,7 +27,6 @@
 
         <section class="flex flex-col gap-[1.25rem]">
 
-                <!--Facebook-->
                 <a href="https://www.facebook.com/eduardo.palmeira.35/" target="_blank" class="link">
                   <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] w-full h-[3.5rem] sm:h-[4rem] md:h-[4.5rem] lg:h-[5rem] p-[0.5rem] sm:p-[0.75rem] md:p-[1rem] lg:p-[1.25rem] rounded-[0.6rem] sm:rounded-[0.75rem] md:rounded-[0.9rem] lg:rounded-[1rem]">
                     <img src="./assets/Facebook.svg" alt="ícone do Facebook" class="inline-block w-8 h-8 mr-2">
@@ -35,7 +34,6 @@
                   </button>
                 </a>
 
-                <!--WhatsApp-->
                 <a href="https://wa.link/1pwalt" target="_blank" class="link">
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC]  w-full h-[3.5rem] sm:h-[4rem] md:h-[4.5rem] lg:h-[5rem] p-[0.5rem] sm:p-[0.75rem] md:p-[1rem] lg:p-[1.25rem] rounded-[0.6rem] sm:rounded-[0.75rem] md:rounded-[0.9rem] lg:rounded-[1rem]">
                         <img src="./assets/WhatsApp.svg" alt="ícone do WhatsApp" class="inline-block w-8 h-8 mr-2">
@@ -43,16 +41,13 @@
                     </button>
                 </a>
 
-                <!--Instagram-->
                 <a href="https://www.instagram.com/eduardolaerciopalmeira?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="link">
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] w-full h-[3.5rem] sm:h-[4rem] md:h-[4.5rem] lg:h-[5rem] p-[0.5rem] sm:p-[0.75rem] md:p-[1rem] lg:p-[1.25rem] rounded-[0.6rem] sm:rounded-[0.75rem] md:rounded-[0.9rem] lg:rounded-[1rem]">
                         <img src="./assets/Instagram.svg" alt="ícone do Instagram" class="inline-block w-8 h-8 mr-2">
                         <span class="font-montserrat font-bold text-xs sm:text-xs md:text-sm lg:text-base text-[#002E76]">Instagram</span>
                     </button>
                 </a>
-
-
-                 <!--Threads-->
+                
                 <a href="https://www.threads.com/@eduardolaerciopalmeira" target="_blank" class="link">
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] w-full h-[3.5rem] sm:h-[4rem] md:h-[4.5rem] lg:h-[5rem] p-[0.5rem] sm:p-[0.75rem] md:p-[1rem] lg:p-[1.25rem] rounded-[0.6rem] sm:rounded-[0.75rem] md:rounded-[0.9rem] lg:rounded-[1rem]">
                         <img src="./assets/Threads.svg" alt="ícone do Threads" class="inline-block w-8 h-8 mr-2">
@@ -60,7 +55,6 @@
                     </button>
                 </a>
 
-                <!--Localização-->
                 <a href="hhttps://maps.app.goo.gl/rDQ9M6P3wDcQLMEJ6" target="_blank" class="link" >
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] w-full h-[3.5rem] sm:h-[4rem] md:h-[4.5rem] lg:h-[5rem] p-[0.5rem] sm:p-[0.75rem] md:p-[1rem] lg:p-[1.25rem] rounded-[0.6rem] sm:rounded-[0.75rem] md:rounded-[0.9rem] lg:rounded-[1rem]">
                         <img src="./assets/Localização.svg" alt="ícone do Instagram" class="inline-block w-8 h-8 mr-2">
@@ -68,7 +62,6 @@
                     </button>
                 </a>
 
-                <!--Nosso Site-->
                 <a href="" target="_blank" class="link">
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC]  rounded-[0.75rem] w-full h-[16.1rem] sm:h-[18rem] md:h-[20rem] lg:h-[22rem] p-3 sm:p-4 md:p-5 flex flex-col items-center">
 
@@ -96,7 +89,7 @@
 
      <!-- Faixa direita (espelhada). remova transform if não quiser espelhar) -->
     <div
-        class="absolute inset-y-0 right-0 z-10 w-[35px] sm:w-6 md:w-8 lg:w-10 xl:w-12 bg-[url('./assets/faixa_lateral_direita.svg')] bg-repeat-y bg-center pointer-events-none">
+        class="absolute inset-y-0 right-0 z-0 w-[35px] h-[1024px] sm:w-[35px] sm:h-[800px] sm:z-0 md:w-[70px] md:h-[1120px] md:z-0 lg:w-[100px] lg:h-[1230px] lg:z-0 bg-[url('./assets/faixa_lateral_direita.svg')] bg-repeat-y bg-center pointer-events-none">
     </div>
 
 </body>
