feat:limpando anotações

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     </div> <!--Container-->
 
-   <!-- Faixa direita (espelhada). remova transform if não quiser espelhar) -->
+   <!-- Faixa direita -->
    <div
     class="absolute top-0 z-0 right-[0.5rem] sm:right-[0.8rem] md:right-[1rem] lg:right-[1.2rem]  w-[35px] sm:w-[50px]  md:w-[70px]  lg:w-[100px] h-[1024px] 
     sm:h-[640px] md:h-[1120px] lg:h-[1230px] bg-[url('./assets/faixa_lateral_direita.svg')] bg-center bg-no-repeat bg-contain pointer-events-none opacity-30"> 
