--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 </head>
 <body class="relative min-h-screen min-w-screen bg-[#002E76] bg-[url('./assets/Background.png')] bg-cover bg-no-repeat bg-top">
 
-    <!-- Faixa esquerda (sempre esticada verticalmente via bg-repeat-y) -->
+    <!-- Faixa esquerda -->
     <div
-        class="absolute top-0 z-0 left-[0.5rem] sm:left-[0.8rem] md:left-[1rem] lg:left-[1.2rem]  sm:w-[50px] md:w-[70px] lg:w-[100px] h-[1024px] sm:h-[640px] md:h-[1120px] lg:h-[1230px] bg-[url('./assets/faixa_lateral_esquerda.svg')] bg-center bg-no-repeat bg-contain pointer-events-none opacity-30"> 
+    class="absolute top-0 left-[0.6rem] sm:left-[0.8rem] md:left-[1rem] lg:left-[1.2rem] z-0 w-[35px] sm:w-[50px] md:w-[70px] lg:w-[100px] min-h-screen sm:h-[1024px] md:h-[1120px] lg:h-[1230px] bg-[url('./assets/faixa_lateral_direita.svg')] bg-center bg-no-repeat bg-contain transform scale-x-[-1] pointer-events-none opacity-30">
     </div>
-
 
     <div class="min-h-screen flex flex-col items-center justify-center gap-[20px] text-[#F9F9F9]">
 
@@ -30,35 +29,35 @@
 
                 <a href="https://www.facebook.com/eduardo.palmeira.35/" target="_blank" class="link">
                   <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] w-full h-[3.5rem] sm:h-[4rem] md:h-[4.5rem] lg:h-[5rem] p-[0.5rem] sm:p-[0.75rem] md:p-[1rem] lg:p-[1.25rem] rounded-[0.6rem] sm:rounded-[0.75rem] md:rounded-[0.9rem] lg:rounded-[1rem]">
-                    <img src="./assets/Facebook.svg" alt="ícone do Facebook" class="inline-block w-8 h-8 mr-2">
+                    <img src="./assets/Facebook.svg" alt="ícone do Facebook" class="inline-block w-8 h-8 mr-2 sm:w-8 md:w-10 lg:w-12 sm:h-8 md:h-10 lg:h-12 sm:mr-3 md:mr-4 lg:mr-5">
                     <span class="font-montserrat font-bold text-xs sm:text-xs md:text-sm lg:text-base text-[#002E76]">Facebook</span>
                   </button>
                 </a>
 
                 <a href="https://wa.link/1pwalt" target="_blank" class="link">
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC]  w-full h-[3.5rem] sm:h-[4rem] md:h-[4.5rem] lg:h-[5rem] p-[0.5rem] sm:p-[0.75rem] md:p-[1rem] lg:p-[1.25rem] rounded-[0.6rem] sm:rounded-[0.75rem] md:rounded-[0.9rem] lg:rounded-[1rem]">
-                        <img src="./assets/WhatsApp.svg" alt="ícone do WhatsApp" class="inline-block w-8 h-8 mr-2">
+                        <img src="./assets/WhatsApp.svg" alt="ícone do WhatsApp" class="inline-block w-8 h-8 mr-2 sm:w-8 md:w-10 lg:w-12 sm:h-8 md:h-10 lg:h-12 sm:mr-3 md:mr-4 lg:mr-5">
                         <span class="font-montserrat font-bold text-xs sm:text-xs md:text-sm lg:text-base text-[#002E76]">WhatsApp</span>
                     </button>
                 </a>
 
                 <a href="https://www.instagram.com/eduardolaerciopalmeira?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="link">
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] w-full h-[3.5rem] sm:h-[4rem] md:h-[4.5rem] lg:h-[5rem] p-[0.5rem] sm:p-[0.75rem] md:p-[1rem] lg:p-[1.25rem] rounded-[0.6rem] sm:rounded-[0.75rem] md:rounded-[0.9rem] lg:rounded-[1rem]">
-                        <img src="./assets/Instagram.svg" alt="ícone do Instagram" class="inline-block w-8 h-8 mr-2">
+                        <img src="./assets/Instagram.svg" alt="ícone do Instagram" class="inline-block w-8 h-8 mr-2 sm:w-8 md:w-10 lg:w-12 sm:h-8 md:h-10 lg:h-12 sm:mr-3 md:mr-4 lg:mr-5">
                         <span class="font-montserrat font-bold text-xs sm:text-xs md:text-sm lg:text-base text-[#002E76]">Instagram</span>
                     </button>
                 </a>
                 
                 <a href="https://www.threads.com/@eduardolaerciopalmeira" target="_blank" class="link">
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] w-full h-[3.5rem] sm:h-[4rem] md:h-[4.5rem] lg:h-[5rem] p-[0.5rem] sm:p-[0.75rem] md:p-[1rem] lg:p-[1.25rem] rounded-[0.6rem] sm:rounded-[0.75rem] md:rounded-[0.9rem] lg:rounded-[1rem]">
-                        <img src="./assets/Threads.svg" alt="ícone do Threads" class="inline-block w-8 h-8 mr-2">
+                        <img src="./assets/Threads.svg" alt="ícone do Threads" class="inline-block w-8 h-8 mr-2 sm:w-8 md:w-10 lg:w-12 sm:h-8 md:h-10 lg:h-12 sm:mr-3 md:mr-4 lg:mr-5">
                         <span class="font-montserrat font-bold text-xs sm:text-xs md:text-sm lg:text-base text-[#002E76]">Threads</span>
                     </button>
                 </a>
 
                 <a href="hhttps://maps.app.goo.gl/rDQ9M6P3wDcQLMEJ6" target="_blank" class="link" >
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] w-full h-[3.5rem] sm:h-[4rem] md:h-[4.5rem] lg:h-[5rem] p-[0.5rem] sm:p-[0.75rem] md:p-[1rem] lg:p-[1.25rem] rounded-[0.6rem] sm:rounded-[0.75rem] md:rounded-[0.9rem] lg:rounded-[1rem]">
-                        <img src="./assets/Localização.svg" alt="ícone do Instagram" class="inline-block w-8 h-8 mr-2">
+                        <img src="./assets/Localização.svg" alt="ícone do Instagram" class="inline-block w-8 h-8 mr-2 sm:w-8 md:w-10 lg:w-12 sm:h-8 md:h-10 lg:h-12 sm:mr-3 md:mr-4 lg:mr-5">
                         <span class="font-montserrat font-bold text-xs sm:text-xs md:text-sm lg:text-base text-[#002E76]">Localização</span>
                     </button>
                 </a>
@@ -67,7 +66,7 @@
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC]  rounded-[0.75rem] w-full h-[16.1rem] sm:h-[18rem] md:h-[20rem] lg:h-[22rem] p-3 sm:p-4 md:p-5 flex flex-col items-center">
 
                         <div class="justify-center gap-2 w-full mb-2">
-                            <img src="./assets/Monitor.svg" alt="ícone do Nosso Site" class="inline-block w-8 h-8 mr-2">
+                            <img src="./assets/Monitor.svg" alt="ícone do Nosso Site" class="inline-block w-8 h-8 mr-2 sm:w-8 md:w-10 lg:w-12 sm:h-8 md:h-10 lg:h-12 sm:mr-3 md:mr-4 lg:mr-5">
                             <span class="font-montserrat font-bold text-xs sm:text-xs md:text-sm lg:text-base text-[#002E76]">Nosso Site</span>
                         </div>
 
@@ -90,8 +89,8 @@
 
    <!-- Faixa direita -->
    <div
-    class="absolute top-0 z-0 right-[0.5rem] sm:right-[0.8rem] md:right-[1rem] lg:right-[1.2rem]  w-[35px] sm:w-[50px]  md:w-[70px]  lg:w-[100px] h-[1024px] 
-    sm:h-[640px] md:h-[1120px] lg:h-[1230px] bg-[url('./assets/faixa_lateral_direita.svg')] bg-center bg-no-repeat bg-contain pointer-events-none opacity-30"> 
+    class="absolute top-0 z-0 right-[0.5rem] sm:right-[0.8rem] md:right-[1rem] lg:right-[1.2rem] w-[35px] sm:w-[50px] md:w-[70px] lg:w-[100px] min-h-screen 
+    sm:h-[1024px] md:h-[1120px] lg:h-[1230px] bg-[url('./assets/faixa_lateral_direita.svg')] bg-center bg-no-repeat bg-contain pointer-events-none opacity-30"> 
     </div>
 
 </body>
