feat: adicionando links e responsividade

--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                     </button>
                 </a>
 
-                <a href="hhttps://maps.app.goo.gl/rDQ9M6P3wDcQLMEJ6" target="_blank" class="link" >
+                <a href="https://maps.app.goo.gl/rDQ9M6P3wDcQLMEJ6" target="_blank" class="link" >
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] w-full h-[3.5rem] sm:h-[4rem] md:h-[4.5rem] lg:h-[5rem] p-[0.5rem] sm:p-[0.75rem] md:p-[1rem] lg:p-[1.25rem] rounded-[0.6rem] sm:rounded-[0.75rem] md:rounded-[0.9rem] lg:rounded-[1rem]">
                         <img src="./assets/Localização.svg" alt="ícone do Instagram" class="inline-block w-8 h-8 mr-2 sm:w-8 md:w-10 lg:w-12 sm:h-8 md:h-10 lg:h-12 sm:mr-3 md:mr-4 lg:mr-5">
                         <span class="font-montserrat font-bold text-xs sm:text-xs md:text-sm lg:text-base text-[#002E76]">Localização</span>
                     </button>
                 </a>
 
-                <a href="" target="_blank" class="link">
+                <a href="https://eduardopalmeiracorretor.com.br/" target="_blank" class="link">
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC]  rounded-[0.75rem] w-full h-[16.1rem] sm:h-[18rem] md:h-[20rem] lg:h-[22rem] p-3 sm:p-4 md:p-5 flex flex-col items-center">
 
                         <div class="justify-center gap-2 w-full mb-2">
