fix: ajusta correção no link que redireciona para o site onde antes estava vazio e também ajusta um erro de digitação no link da localização onde o https estava hhttps

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </a>
 
                 <!--Localização-->
-                <a href="hhttps://maps.app.goo.gl/rDQ9M6P3wDcQLMEJ6" target="_blank" class="link" >
+                <a href="https://maps.app.goo.gl/rDQ9M6P3wDcQLMEJ6" target="_blank" class="link" >
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] rounded-[0.6rem] w-[100%] h-[3.5rem] p-[0.5rem]">
                         <img src="./assets/Localização.png" alt="ícone do Instagram" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
                         <span class="font-montserrat font-bold text-xs text-[#002E76]">Localização</span>
@@ -54,7 +54,7 @@
                 </a>
 
                 <!--Nosso Site-->
-                <a href="" target="_blank" class="link">
+                <a href="https://eduardopalmeiracorretor.com.br" target="_blank" class="link">
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC]  rounded-[0.75rem] w-[100%] h-[16.1rem] p-3 flex flex-col items-center">
 
                         <div class="justify-center gap-2 w-full mb-2">
