feat: Adicionar rede social Threads

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </a>
 
                 <!--WhatsApp-->
-                <a href="https://wa.link/1pwalt" target="_blank" class="link">
+                <a href="https://wa.me/5582991043262?text=Olá%20Eduardo%20Palmeira!%0AGostaria%20de%20agendar%20um%20atendimento." target="_blank" class="link">
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] rounded-[0.6rem] w-[100%] h-[3.5rem] p-[0.5rem]">
                         <img src="./assets/WhatsApp.png" alt="ícone do WhatsApp" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
                         <span class="font-montserrat font-bold text-xs text-[#002E76]">Eduardo Palmeira</span>
@@ -38,9 +38,17 @@
                 </a>
 
                 <!--Instagram-->
-                <a href="https://www.instagram.com/eduardolaerciopalmeira?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="link">
+                <a href="https://www.instagram.com/eduardolaerciopalmeira" target="_blank" class="link">
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] rounded-[0.6rem] w-[100%] h-[3.5rem] p-[0.5rem]">
                         <img src="./assets/Instagram.png" alt="ícone do Instagram" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
+                        <span class="font-montserrat font-bold text-xs text-[#002E76]">Eduardo Palmeira</span>
+                    </button>
+                </a>
+
+                <!--Threads-->
+                <a href="https://www.threads.com/@eduardolaerciopalmeira" target="_blank" class="link">
+                    <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] rounded-[0.6rem] w-[100%] h-[3.5rem] p-[0.5rem]">
+                        <img src="./assets/icone-threads.svg" alt="ícone do Threads" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
                         <span class="font-montserrat font-bold text-xs text-[#002E76]">Eduardo Palmeira</span>
                     </button>
                 </a>
