--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="min-h-screen flex flex-col items-center justify-center gap-[20px] text-[#F9F9F9]">
 
         <header class="flex flex-col items-center justify-center gap-[10px] mr-[1rem] ml-[1rem] pt-4">
-            <img src ='./assets/Foto-de-perfil.png' alt="Foto de Perfil" class="mt-1">
+            <img src ='./assets/Foto-de-Perfil.svg' alt="Foto de Perfil" class="mt-1">
             <p class="font-montserrat font-bold font-normal mt-3 text-center text-xs font-bold mb-[0.6rem]">"Encontre casas, apartamentos e imóveis comerciais com segurança e facilidade. Faça parte da nossa comunidade de clientes satisfeitos."</p>
         </header>
 
@@ -24,7 +24,7 @@
                 <!--Facebook-->
                 <a href="https://www.facebook.com/eduardo.palmeira.35/" target="_blank" class="link">
                   <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] rounded-[0.6rem] w-[100%] h-[3.5rem] p-[0.5rem]">
-                    <img src="./assets/Facebook.png" alt="ícone do Facebook" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
+                    <img src="./assets/Facebook.svg" alt="ícone do Facebook" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
                     <span class="font-montserrat font-bold text-xs text-[#002E76]">Eduardo Palmeira</span>
                   </button>
                 </a>
@@ -32,7 +32,7 @@
                 <!--WhatsApp-->
                 <a href="https://wa.me/5582991043262?text=Olá%20Eduardo%20Palmeira!%0AGostaria%20de%20agendar%20um%20atendimento." target="_blank" class="link">
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] rounded-[0.6rem] w-[100%] h-[3.5rem] p-[0.5rem]">
-                        <img src="./assets/WhatsApp.png" alt="ícone do WhatsApp" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
+                        <img src="./assets/WhatsApp.svg" alt="ícone do WhatsApp" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
                         <span class="font-montserrat font-bold text-xs text-[#002E76]">Eduardo Palmeira</span>
                     </button>
                 </a>
@@ -40,7 +40,7 @@
                 <!--Instagram-->
                 <a href="https://www.instagram.com/eduardolaerciopalmeira" target="_blank" class="link">
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] rounded-[0.6rem] w-[100%] h-[3.5rem] p-[0.5rem]">
-                        <img src="./assets/Instagram.png" alt="ícone do Instagram" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
+                        <img src="./assets/Instagram.svg" alt="ícone do Instagram" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
                         <span class="font-montserrat font-bold text-xs text-[#002E76]">Eduardo Palmeira</span>
                     </button>
                 </a>
@@ -56,7 +56,7 @@
                 <!--Localização-->
                 <a href="https://maps.app.goo.gl/rDQ9M6P3wDcQLMEJ6" target="_blank" class="link" >
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC] rounded-[0.6rem] w-[100%] h-[3.5rem] p-[0.5rem]">
-                        <img src="./assets/Localização.png" alt="ícone do Instagram" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
+                        <img src="./assets/Localização.svg" alt="ícone do Instagram" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
                         <span class="font-montserrat font-bold text-xs text-[#002E76]">Localização</span>
                     </button>
                 </a>
@@ -66,13 +66,13 @@
                     <button class="bg-[#F9F9F9] hover:bg-[#DCDCDC]  rounded-[0.75rem] w-[100%] h-[16.1rem] p-3 flex flex-col items-center">
 
                         <div class="justify-center gap-2 w-full mb-2">
-                            <img src="./assets/PC.png" alt="ícone do Nosso Site" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
+                            <img src="./assets/Monitor.svg" alt="ícone do Nosso Site" class="inline-block w-[1.9rem] h-[1.9rem] mr-2">
                             <span class="font-montserrat font-bold text-xs text-[#002E76]">Nosso Site</span>
                         </div>
 
                         <!-- Imagem do site -->
                         <div class="flex items-center justify-center flex-1">
-                            <img src="./assets/Img-do-botao-site.png" alt="Preview do site"
+                            <img src="./assets/Img-do-Site.svg" alt="Preview do site"
                             class="w-[253px] h-[192px] object-contain rounded">
                         </div>
                     </button>
@@ -81,7 +81,7 @@
 
         <footer class="pb-4">
 
-            <img src="./assets/Logo Eduardo.png" alt="Logo do Linktree" class="mx-auto w-[2.9rem] h-[2.9rem] ">
+            <img src="./assets/Logo.svg" alt="Logo do Linktree" class="mx-auto w-[2.9rem] h-[2.9rem] ">
 
         </footer>
 
